# Rust-Axum-REST-API-Template

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml  init-test.db.sql  questions.md
.github/: dependabot.yml
.github/workflows/: rust.yml
migrations/create_table-tweet/: down.sql  up.sql
src/: lib.rs  main.rs
src/domain/: mod.rs
src/domain/db/: schema.rs
src/domain/tweet/: dto.rs  mod.rs  model.rs  tweet_controller.rs  tweet_repository.rs  tweet_service.rs
src/platform/: config.rs  mod.rs  service_controller.rs
src/platform/db/: connection_manager.rs  migration.rs  mod.rs
src/platform/openapi/: api_generator.rs  mod.rs
src/platform/router/: handler.rs
src/platform/service/: service_factory.rs
tests/: integration-tests.rs
