[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.28.0", features = ["macros", "rt-multi-thread"]}
axum = "0.6.17"
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "time"]} 
tower-http = {version = "0.4", features=["full"]}
serde_json = { version = "1.0.95" }
serde = { version = "1.0.130", features = ["derive"] }
