[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.28.0", features = ["macros", "rt-multi-thread"]}
axum = "0.7.5"
tower-http = {version = "0.5.2", features=["full"]}
serde_json = { version = "1.0.95" }
serde = { version = "1.0.130", features = ["derive"] }
dotenvy = "0.15"

diesel = { version = "2.1", features = ["postgres", "uuid", "serde_json"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.6.0", features = ["postgres"] }

uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
o2o = "0.4.2"
